--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^9.6.1",
+    "body-parser": "^1.19.0",
     "browser-sync": "^2.26.7",
     "cssnano": "^4.1.10",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
